fix alignment bug

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,18 @@
+:root {
+    --dark-background: #0D0C1D;
+    --orange-text: #E3790A;
+}
+
 html {
     scroll-behavior: smooth;
+    font-family: 'Signika', sans-serif;
+}
+body {
+    text-align: center;
 }
 
 header {
-    background-color: #0D0C1D;
+    background-color: var(--dark-background);
     padding: 0.5rem;
     box-shadow: 2px 2px 4px #176275;
 }
@@ -11,7 +20,7 @@ header {
 #heading {
     font-family: 'Dancing Script', cursive;
     font-size: 2rem;
-    color: #E3790A;
+    color: var(--orange-text);
 }
 #navigation-list {
     list-style-type: none;
@@ -29,4 +38,11 @@ header {
     color: white;
     z-index: 3;
     text-shadow: 3px 3px 3px #c7c1c1;
+}
+
+/**Home*/
+#home {
+    background-color: var(--dark-background);
+    height: 80vh;
+    color: aliceblue;
 }
